@@ -48,6 +48,10 @@
   typedef unsigned int size_t;
 #endif
 
+#if __STDC_VERSION__ >= 201112L
+  typedef unsigned char max_align_t;
+#endif
+
 #ifndef __WCHAR_T_DEFINED
 #define __WCHAR_T_DEFINED
   typedef char wchar_t;
