@@ -1,5 +1,5 @@
-#ifndef __SDC51_STDNORETURN_H
-#define __SDC51_STDNORETURN_H 1
+#ifndef __SDCC_STDNORETURN_H
+#define __SDCC_STDNORETURN_H 1
 
 #define noreturn _Noreturn
 
