@@ -83,7 +83,7 @@ bool uselessDecl = TRUE;
 
 %token <yychar> IDENTIFIER TYPE_NAME ADDRSPACE_NAME
 %token <val> CONSTANT
-%token SIZEOF TYPEOF OFFSETOF
+%token SIZEOF ALIGNOF TYPEOF OFFSETOF
 %token PTR_OP INC_OP DEC_OP LEFT_OP RIGHT_OP LE_OP GE_OP EQ_OP NE_OP
 %token AND_OP OR_OP
 %token <yyint> MUL_ASSIGN DIV_ASSIGN MOD_ASSIGN ADD_ASSIGN
@@ -332,6 +332,7 @@ unary_expr
    | unary_operator cast_expr { $$ = newNode ($1, $2, NULL); }
    | SIZEOF unary_expr        { $$ = newNode (SIZEOF, NULL, $2); }
    | SIZEOF '(' type_name ')' { $$ = newAst_VALUE (sizeofOp ($3)); }
+   | ALIGNOF '(' type_name ')'{ $$ = newAst_VALUE (alignofOp ($3)); }
    | TYPEOF unary_expr        { $$ = newNode (TYPEOF, NULL, $2); }
    | OFFSETOF '(' type_name ',' offsetof_member_designator ')' { $$ = offsetofOp($3, $5); }
    ;
